[package]
name = "bevy_tray_icon"
version = "0.1.1"
edition = "2021"
authors = ["elm"]
categories = ["game-development"]
description = "Allows the use of tray-icon to manipulate the system tray."
keywords = ["game", "gamedev", "bevy"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/not-elm/bevy_tray_icon"

[dependencies]
bevy = { version = "0.13.2", default-features = false, features = [
    "bevy_asset",
    "bevy_render"
] }
tray-icon = "0.14.0"
thiserror = "1.0.61"

[dev-dependencies]
bevy = "0.13.2"
bevy_test_helper = { git = "https://github.com/not-elm/bevy_test_helper" }

[lints.clippy]
type_complexity = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
undocumented_unsafe_blocks = "warn"
redundant_else = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"

[lints.rust]
missing_docs = "warn"
